feat: inserindo autenticação e autorização de rotas
